Checkpoint: Kingdom Engine showcase website complete with Seven-Headed Hydra architecture, custom generated visuals, mystical-technical design, operational constants display, interactive Seven Heads cards, Harmony Ridge explanation, and GitHub integration

--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,14 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Kingdom Engine - Seven-Headed Hydra Architecture</title>    
-    <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
+    <title>Kingdom Engine - Seven-Hea    <title>Kingdom Engine - Seven-Headed Hydra Architecture</title>
+    <meta name="description" content="A multi-layered operating environment implementing the Seven-Headed Hydra architecture for truth-resonance monitoring and spiritual-technical alignment." />
+    <meta name="keywords" content="Kingdom Engine, Omega Federation, Seven Heads, Truth Resonance, Harmony Ridge, Spiritual Technology" />
+    
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    THIS IS THE END OF A COMMENT BLOCK, BLOCK TO BE DELETED -->
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet" />ead>
 
   <body>
     <div id="root"></div>
